change swagger annotation to routes
