# routes/api/jimpitan.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\Controller;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Auth;
 use Illuminate\Support\Facades\Route;
@@ -124,3 +125,140 @@ Route::get("/jimpitan/scan-qr", function (Request $request) {
         return response()->json(["status" => "Internal Server Error"], 500);
     }
 });
+
+/**
+ * @OA\Post(
+ *     path="/api/jimpitan/tampil",
+ *     tags={"Jimpitan"},
+ *     summary="Get Jimpitan data function",
+ *     description="Get all jimpitan data",
+ *     operationId="s",
+ *     security={{"passport": {}}},
+ *     @OA\RequestBody(
+ *         @OA\MediaType(
+ *             mediaType="application/json",
+ *             @OA\Schema(
+ *                 @OA\Property(
+ *                     property="dari",
+ *                     type="string"
+ *                 ),
+ *                 @OA\Property(
+ *                     property="ke",
+ *                     type="string"
+ *                 ),
+ *                 @OA\Property(
+ *                     property="cari",
+ *                     type="string"
+ *                 ),
+ *                 @OA\Property(
+ *                     property="kategori",
+ *                     type="string"
+ *                 ),
+ *                 example={"dari": "2022-12-01", "ke": "2022-12-30", "cari": "", "kategori": "harian"}
+ *             )
+ *         )
+ *     ),
+ *
+ *     @OA\Response(
+ *         response="default",
+ *         description="successful operation"
+ *     )
+ * )
+ *
+ * @OA\Post(
+ *     path="/api/jimpitan/tambah",
+ *     tags={"Jimpitan"},
+ *     summary="Add Jimpitan function",
+ *     description="Adding Jimpitan data to sistem",
+ *     security={{"passport": {}}},
+ *     @OA\RequestBody(
+ *         @OA\MediaType(
+ *             mediaType="application/json",
+ *             @OA\Schema(
+ *                 @OA\Property(
+ *                     property="no_kk",
+ *                     type="number"
+ *                 ),
+ *                 @OA\Property(
+ *                     property="nominal",
+ *                     type="number"
+ *                 ),
+ *                 @OA\Property(
+ *                     property="kategori",
+ *                     type="string"
+ *                 ),
+ *                 example={"no_kk": 3471072108961377, "nominal": 500, "kategori": "harian"}
+ *             )
+ *         )
+ *     ),
+ *
+ *
+ *     @OA\Response(
+ *         response="default",
+ *         description="successful operation"
+ *     )
+ * )
+ *
+ * @OA\Post(
+ *     path="/api/jimpitan/ubah/{id}",
+ *     tags={"Jimpitan"},
+ *     summary="Update Jimpitan data function",
+ *     description="Updating jimpitan data by id",
+ *     security={{"passport": {}}},
+ *
+ *     @OA\Parameter(
+ *         description="Parameter with mutliple examples",
+ *         in="path",
+ *         name="id",
+ *         required=true,
+ *         @OA\Schema(type="string"),
+ *     ),
+ *
+ *     @OA\RequestBody(
+ *         @OA\MediaType(
+ *             mediaType="application/json",
+ *             @OA\Schema(
+ *                 @OA\Property(
+ *                     property="nominal",
+ *                     type="number"
+ *                 ),
+ *                 @OA\Property(
+ *                     property="kategori",
+ *                     type="string"
+ *                 ),
+ *                 example={"nominal": 500, "kategori": "harian"}
+ *             )
+ *         )
+ *     ),
+ *
+ *
+ *     @OA\Response(
+ *         response="default",
+ *         description="successful operation"
+ *     )
+ * )
+ *
+ * @OA\Get(
+ *     path="/api/jimpitan/hapus/{id}",
+ *     tags={"Jimpitan"},
+ *     summary="Delete Jimpitan data",
+ *     description="Deleting Jimpitan data by id",
+ *     security={{"passport": {}}},
+ *
+ *     @OA\Parameter(
+ *         description="Parameter with mutliple examples",
+ *         in="path",
+ *         name="id",
+ *         required=true,
+ *         @OA\Schema(type="string"),
+ *     ),
+ *
+ *     @OA\Response(
+ *         response="default",
+ *         description="successful operation"
+ *     )
+ * )
+ *
+*/
+
+class Jimpitan extends Controller{}
