# storage/api-docs/api-docs.json
@@ -13,42 +13,11 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/api/login": {
-            "post": {
-                "tags": ["Auth"],
-                "summary": "Login function",
-                "description": "Login to app",
-                "operationId": "greet",
-                "parameters": [
-                    {
-                        "name": "email",
-                        "in": "query",
-                        "description": "Email",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "password",
-                        "in": "query",
-                        "description": "Password",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "default": {
-                        "description": "successful operation"
-                    }
-                }
-            }
-        },
         "/api/dashboard": {
             "get": {
-                "tags": ["Dashboard"],
+                "tags": [
+                    "Dashboard"
+                ],
                 "summary": "Get Dashboard function",
                 "description": "Get all data dashboard ",
                 "responses": {
@@ -63,32 +32,11 @@
                 ]
             }
         },
-        "/api/logout": {
-            "get": {
-                "tags": ["Auth"],
-                "summary": "Logout from App",
-                "description": "Logout from app",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "query",
-                        "description": "id",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "default": {
-                        "description": "successful operation"
-                    }
-                }
-            }
-        },
         "/api/jimpitan/tampil": {
             "post": {
-                "tags": ["Jimpitan"],
+                "tags": [
+                    "Jimpitan"
+                ],
                 "summary": "Get Jimpitan data function",
                 "description": "Get all jimpitan data",
                 "operationId": "s",
@@ -135,7 +83,9 @@
         },
         "/api/jimpitan/tambah": {
             "post": {
-                "tags": ["Jimpitan"],
+                "tags": [
+                    "Jimpitan"
+                ],
                 "summary": "Add Jimpitan function",
                 "description": "Adding Jimpitan data to sistem",
                 "requestBody": {
@@ -177,7 +127,9 @@
         },
         "/api/jimpitan/ubah/{id}": {
             "post": {
-                "tags": ["Jimpitan"],
+                "tags": [
+                    "Jimpitan"
+                ],
                 "summary": "Update Jimpitan data function",
                 "description": "Updating jimpitan data by id",
                 "parameters": [
@@ -226,7 +178,9 @@
         },
         "/api/jimpitan/hapus/{id}": {
             "get": {
-                "tags": ["Jimpitan"],
+                "tags": [
+                    "Jimpitan"
+                ],
                 "summary": "Delete Jimpitan data",
                 "description": "Deleting Jimpitan data by id",
                 "parameters": [
@@ -250,6 +204,66 @@
                         "passport": []
                     }
                 ]
+            }
+        },
+        "/api/login": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Login function",
+                "description": "Login to app",
+                "operationId": "greet",
+                "parameters": [
+                    {
+                        "name": "email",
+                        "in": "query",
+                        "description": "Email",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "password",
+                        "in": "query",
+                        "description": "Password",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "default": {
+                        "description": "successful operation"
+                    }
+                }
+            }
+        },
+        "/api/logout": {
+            "get": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Logout from App",
+                "description": "Logout from app",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "query",
+                        "description": "id",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "default": {
+                        "description": "successful operation"
+                    }
+                }
             }
         }
     },
